--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -4,11 +4,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 
-body {
-  background-color: #f6f6f6;
-  font-family: 'Inter', sans-serif;
-}
-
 @layer components {
   /* Typography */
 
@@ -24,6 +19,10 @@ body {
 
   .btn-secondary {
     @apply inline-flex items-center text-sm text-gray-600 dark:text-gray-400 border border-gray-900 hover:bg-gray-500 hover:text-white px-4 py-2 rounded gap-1;
+  }
+
+  .btn-secondary[disabled] {
+    @apply opacity-50 cursor-not-allowed;
   }
 
   .btn-danger {
@@ -102,24 +101,31 @@ body {
   .confirm-delete .actions {
     @apply space-x-2;
   }
+
+  /* Forms */
+
+  .form-group {
+    @apply mb-4;
+  }
+
+  .form-group label {
+    @apply block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300;
+  }
+
+  .form-group input,
+  .form-group textarea {
+    @apply block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white rounded focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-indigo-500 dark:focus:border-indigo-500;
+  }
+
+  .form-group input:focus,
+  .form-group textarea:focus {
+    @apply border-indigo-500;
+  }
 }
 
-.form-group {
-  @apply mb-4;
-}
-
-.form-group label {
-  @apply block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300;
-}
-
-.form-group input,
-.form-group textarea {
-  @apply block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white rounded focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-indigo-500 dark:focus:border-indigo-500;
-}
-
-.form-group input:focus,
-.form-group textarea:focus {
-  @apply border-indigo-500;
+body {
+  background-color: #f6f6f6;
+  font-family: 'Inter', sans-serif;
 }
 
 /* Flash messages */
