--- a/embedded/admin/templates/includes/admin_header.tmpl
+++ b/embedded/admin/templates/includes/admin_header.tmpl
@@ -14,14 +14,19 @@
       }
     </script>
     <link rel="stylesheet" href="/admin/static/css/app.css">
+    <script src="/admin/static/js/menu.js"></script>
 </head>
 <body class="dark:bg-neutral-900">
     {{ template "includes/flash_messages" . }}
-    <!--  button class="menu-toggle" id="menu-toggle">☰</button -->
+    <button id="menu-toggle" class="fixed top-4 left-4 z-50 p-2 rounded-lg text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-500 dark:focus:ring-gray-400 md:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+    </button>
     <div class="flex h-screen">
       <!-- Sidebar -->
-      <div class="w-64 bg-white dark:bg-slate-800 flex flex-col m-8 rounded-xl">
-        <div class="p-4 flex items-center gap-2">
+      <div id="sidebar" class="fixed md:static w-full md:w-64 h-full md:h-auto inset-0 md:inset-auto bg-white dark:bg-slate-800 flex flex-col md:m-8 md:rounded-xl transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-40">
+        <div class="p-4 flex items-center gap-2 ml-12 md:ml-0">
           <img src="/admin/static/img/logo.png" alt="Captain Logo"  />
         </div>
 
@@ -108,6 +113,6 @@
       </div>
 
       <!-- Main Content -->
-      <div class="flex-1 mt-8">
-         <main class="rounded-xl bg-white dark:bg-slate-800 mr-8 p-8">
+      <div class="flex-1 mt-8 p-4 md:p-1 md:mt-16 transition-all duration-300 ease-in-out">
+         <main class="rounded-xl bg-white dark:bg-slate-800 mx-8 p-4">
 {{end}}
